docs: specify Java language levels and version-aware feature gating
- Add JavaLanguageLevel + feature availability model (incl. preview)\n- Document per-module level detection from Maven/Gradle/Bazel + nova-config overrides\n- Describe parser/semantic feature gates and LSP propagation via nova/projectConfiguration\n- Extend testing strategy with cross-version fixture guidance